--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"> 
+	<meta name="viewport" content="width = device-width, initial-scale=1.0 ">
 	<title>NeuroLab</title>
 
 	<style type="text/css">
@@ -10,40 +11,53 @@
 			font-weight: bold;
 		}
 
+
 	</style>
 </head>
 <body>
 	<form>
-		<table border="0" cellpadding="5" cellspacing="0" width="100%">
-			<tr class="title">
-				<td>
-					<br>성신여자대학교</br>
-					Neuropsychological Lab
+		<p></p>
+		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width:1000px" align="center">
+			<tr>
+				<td class="title">
+					<img src="title.jpg" alt="title" style="margin-left: auto; margin-right: auto; display: block;">
 				</td>
 			</tr>
 			
-		</table>&nbsp;&nbsp;&nbsp;<p></p>
+		</table>&nbsp; <!--<p></p>-->
 
-		<table border="0" cellpadding="10" cellspacing="2" width="700px" style="width:100%" align="center">
+		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width:1000px" align="center"> <!--style="width:100%"-->
+			
+			<!--1. 이미지 클릭 설명-->
 			<tr>
-				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScvK_XHZVUgdxhj9ldkFYHTQ0gmb-aA4wdsJxVeOptk-lLTJA/viewform">
-					<img src="bdd.png" alt="bdd" align="center"></td>
-				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLSdfnK29jBEW2R9s0Qz8bsoAQVk7Uyj8ySXTJNjbDDgybvnjnw/viewform">
-					<img src="brain.png" alt="brain"  align="center"></td>
-				<td><img src="comingsoon.jpg" alt="comingsoon" align="center"></td>
+				<td colspan="3" align="center" height="100px"> <img src="click.jpg" alt="click"></td>
 			</tr>
 
+			<!--2. 각 이미지 제목-->
+			<tr>
+				<td align="center"> 나의 외모 만족도는? </td>
+				<td align="center"> 뇌파 실험1 </td>
+				<td align="center"> 뇌파 실험2 </td>
+			</tr>
 
+			<!--3. 이미지 링크-->
+			<tr>
+				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScvK_XHZVUgdxhj9ldkFYHTQ0gmb-aA4wdsJxVeOptk-lLTJA/viewform">
+					<img src="bdd.png" alt="bdd" align="center" width="300px"></td>
+				<td><!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSdfnK29jBEW2R9s0Qz8bsoAQVk7Uyj8ySXTJNjbDDgybvnjnw/viewform">-->
+					<img src="brain.png" alt="brain"  align="center" width="300px"></td>
+				<td><img src="comingsoon.jpg" alt="comingsoon" align="center" width="300px"></td>
+			</tr>
+
+			<!--4. 실험에 대한 설명-->
+			<tr>
+				<td align="center"> 외모 만족도에 따른 과제 수행 차이 연구&nbsp; <p>참여비 : 10,000원</p>
+				</td>
+				<td></td>
+				<td></td>
+			</tr>
 		</table>
-
-		<div>
-			<!--<a href="bdd.html">
-				<img src="Neurolab/bdd.jpg">-->
-
-		</div>
-
-
+		
 	</form>
-
 </body>
- </html>
+</html>
