--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width:1000px" align="center">
 			<tr>
 				<td class="title">
-					<img src="title.jpg" alt="title" style="margin-left: auto; margin-right: auto; display: block;">
+					<img src="title.jpg" alt="title"/>
 				</td>
 			</tr>
 			
@@ -30,7 +30,7 @@
 			
 			<!--1. 이미지 클릭 설명-->
 			<tr>
-				<td colspan="3" align="center" height="100px"> <img src="click.jpg" alt="click"></td>
+				<td colspan="3" align="center" height="100px"> <img src="click.jpg" alt="click"/></td>
 			</tr>
 
 			<!--2. 각 이미지 제목-->
