--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8"> 
-	<meta name="viewport" content="width = device-width, initial-scale=1.0 ">
+	<meta name="viewport" content="width = device-width">
 	<title>NeuroLab</title>
 
 	<style type="text/css">
@@ -20,7 +20,7 @@
 		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width:1000px" align="center">
 			<tr>
 				<td class="title">
-					<img src="title.jpg" alt="title"/>
+					<img src="title.jpg" alt="title" align="center" width="500px" />
 				</td>
 			</tr>
 			
@@ -30,7 +30,7 @@
 			
 			<!--1. 이미지 클릭 설명-->
 			<tr>
-				<td colspan="3" align="center" height="100px"> <img src="click.jpg" alt="click"/></td>
+				<td colspan="3" align="center" height="100px"> <img src="click.jpg" alt="click" align="center" width="300px" /></td>
 			</tr>
 
 			<!--2. 각 이미지 제목-->
