--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<meta charset="utf-8"> 
-	<meta name="viewport" content="width = device-width">
+	<!--<meta name="viewport" content="width = device-width">-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0, user-scalable=no, target-densitydpi=medium-dpi" />
 	<title>NeuroLab</title>
 
 	<style type="text/css">
@@ -17,20 +18,20 @@
 <body>
 	<form>
 		<p></p>
-		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width:1000px" align="center">
+		<table border="0" cellpadding="0" cellspacing="0" width="80%" align="center">
 			<tr>
 				<td class="title">
-					<img src="title.jpg" alt="title" align="center" width="500px" />
+					<img src="title.png" alt="title" align="center" width="50%" />
 				</td>
 			</tr>
 			
 		</table>&nbsp; <!--<p></p>-->
 
-		<table border="0" cellpadding="0" cellspacing="0" width="100%" style="width:1000px" align="center"> <!--style="width:100%"-->
+		<table border="0" cellpadding="0" cellspacing="0" width="80%" align="center"> <!--style="width:100%"-->
 			
 			<!--1. 이미지 클릭 설명-->
 			<tr>
-				<td colspan="3" align="center" height="100px"> <img src="click.jpg" alt="click" align="center" width="300px" /></td>
+				<td colspan="3" align="center" height="10%"> <img src="click.png" alt="click" align="center" width="30%"/></td>
 			</tr>
 
 			<!--2. 각 이미지 제목-->
@@ -41,12 +42,12 @@
 			</tr>
 
 			<!--3. 이미지 링크-->
-			<tr>
+			<tr align="center">
 				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScvK_XHZVUgdxhj9ldkFYHTQ0gmb-aA4wdsJxVeOptk-lLTJA/viewform">
-					<img src="bdd.png" alt="bdd" align="center" width="300px"></td>
+					<img src="bdd.png" alt="bdd" width="90%"></td>
 				<td><!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSdfnK29jBEW2R9s0Qz8bsoAQVk7Uyj8ySXTJNjbDDgybvnjnw/viewform">-->
-					<img src="brain.png" alt="brain"  align="center" width="300px"></td>
-				<td><img src="comingsoon.jpg" alt="comingsoon" align="center" width="300px"></td>
+					<img src="brain.png" alt="brain"  align="center" width="90%"></td>
+				<td><img src="comingsoon.jpg" alt="comingsoon" align="center" width="90%"></td>
 			</tr>
 
 			<!--4. 실험에 대한 설명-->
