--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<table border="0" cellpadding="0" cellspacing="0" width="80%" align="center">
 			<tr>
 				<td class="title">
-					<img src="title.png" alt="title" align="center" width="50%">
+					<img src="title.jpg" alt="t" align="center" width="50%">
 				</td>
 			</tr>
 			
@@ -32,7 +32,7 @@
 			<!--1. 이미지 클릭 설명-->
 			<tr>
 				<td colspan="3" align="center" height="10%"> 
-					<img src="click.png" alt="click" align="center" width="30%">
+					<img src="click.jpg" alt="c" align="center" width="30%">
 				</td>
 			</tr>
 
