--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 					<img src="title.jpg" alt="title" align="center" width="50%">
 				</td>
 			</tr>
-			
 		</table>&nbsp; <!--<p></p>-->
 
 		<table border="0" cellpadding="0" cellspacing="0" width="80%" align="center"> <!--style="width:100%"-->
-			
 			<!--1. 이미지 클릭 설명-->
 			<tr>
 				<td colspan="3" align="center" height="10%"> 
@@ -38,9 +36,9 @@
 
 			<!--2. 각 이미지 제목-->
 			<tr>
-				<td align="center"> 나의 외모 만족도는? </td>
-				<td align="center"> 뇌파 실험1 </td>
-				<td align="center"> 뇌파 실험2 </td>
+				<td align="center"> <STRONG>당신의 외모 만족도는?</STRONG> </td>
+				<td align="center"> 실험1 </td>
+				<td align="center"> 실험2 </td>
 			</tr>
 
 			<!--3. 이미지 링크-->
@@ -48,18 +46,19 @@
 				<td><a href="https://docs.google.com/forms/d/e/1FAIpQLScvK_XHZVUgdxhj9ldkFYHTQ0gmb-aA4wdsJxVeOptk-lLTJA/viewform">
 					<img src="bdd.png" alt="bdd" width="90%"></td>
 				<td><!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSdfnK29jBEW2R9s0Qz8bsoAQVk7Uyj8ySXTJNjbDDgybvnjnw/viewform">-->
-					<img src="brain.png" alt="brain"  align="center" width="90%"></td>
+					<img src="comingsoon.jpg" alt="brain"  align="center" width="90%"></td>
 				<td><img src="comingsoon.jpg" alt="comingsoon" align="center" width="90%"></td>
 			</tr>
 
 			<!--4. 실험에 대한 설명-->
 			<tr>
-				<td align="center"> 외모 만족도에 따른 과제 수행 차이 연구&nbsp; <p>참여비 : 10,000원</p>
+				<td align="center"> 외모 만족도에 따른 과제 수행에 차이가 있을까?&nbsp;
 				</td>
 				<td></td>
 				<td></td>
 			</tr>
 		</table>
+		<P></P>
 		
 	</form>
 </body>
